--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <p id="user-uid"></p>
           <p id="user-name"></p>
           <p id="user-email-verify"></p>
-          <a href="https://i-like-dev.github.io/grade" target="_blank">前往計算成績</a>
+          <a href="https://i-like-dev.github.io/grade-counter/tw1login.html" target="_blank">前往計算成績</a>
         </div>
         <div class="input-group mb-4">
           <button class="button button-primary" id="editor" type="button">更新顯示名稱</button>
