--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-    <title>用成績統計系統 - 登入</title>
+    <title>成績統計系統 - 登入</title>
     <link rel="canonical" href="https://www.letswrite.tw/firebase-auth/"/>
     <meta property="og:url" content="https://letswritetw.github.io/letswrite-firebase-auth/"/>
     <meta property="fb:app_id" content="911000986339138"/>
@@ -44,7 +44,7 @@
       <section class="user-null none">
         <!-- 登入 || 註冊 表單-->
         <div class="form-card">
-          <div class="cat mb-4"><img src="dist/cat_input.svg"/><br>
+          <div class="cat mb-4"><img src="dist/cat_input.svg"/><a href="alert(本服務暫時不開放，敬請見諒) target="_blank" title="訪客模式">訪客模式</a>
           <div class="tab-title mb-4"><a class="active" href="#" data-value="signin">登入</a><a href="#" data-value="create">註冊</a></div>
           <div class="input-group mb-4">
             <input class="u-full-width" id="email" type="email" placeholder="輸入帳號"/>
